[package]
name = "bpp-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
serde_json = "1.0"
serde-big-array = "0.5"
